# KaggleKit

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  agents.md  main.py  pyproject.toml  run.sh  server.py
notebook/: check_data.ipynb  kaggle_entrypoint.ipynb
src/: config.py  create_folds.py  data_cleaning.py  model_dispatcher.py  model_pipelines.py  optuna_tuner.py  train.py
src/kagglebase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_cleaning.py
