[project]
name = "kagglebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.115.0",
    "joblib>=1.5.3",
    "optuna>=4.0.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "F", "I", "W", "C901"]
lint.ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "joblib", "catboost"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "black>=26.3.1",
    "mypy>=1.20.0",
    "pandas-stubs>=2.3.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
